Add Tweets get endpoint
